# evol

./: CMakeLists.txt  Cluster.h  main.cpp
imgui/examples/: imgui_impl_opengl3.cpp
imgui/examples/example_sdl_opengl3/: main.cpp
include/: Behavior.h  Colors.h  Drawable.h  Genome.h  Loader.h  Morphology.h  Specie.h  Specimen.h  Text.h  Timer.h  Window.h  types.h
species/: alpiste.h  andreita.h  eduito.h  gordito.h
src/: Behavior.cpp  Genome.cpp  Loader.cpp  Morphology.cpp  Specie.cpp  Specimen.cpp  Timer.cpp
